# GPTi

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  env.example
docs/: index.html
docs/releases/: install.sh
src/: config.rs  main.rs  openai.rs  utils.rs
