[package]
name = "gpti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive", "env"] }
cli-clipboard = "0.4.0"
directories = "5.0.1"
openai = "1.0.0-alpha.13"
serde = "1.0.195"
spinners = "4.1.1"
tokio = "1.35.1"
toml = "0.8.8"
